<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dev_name" translatable="false">gamesBARS</string>
    <string name="app_name">GuessThe</string>
    <string name="menu_title">Guess \nRussian Auto!</string>
    <string name="privacy_policy"><a href="https://gamesbars.github.io/Privacy-Policy/">Privacy Policy</a></string>
    <string name="share_subject">Fun game!</string>
    <string name="share_text">"Play with me! "</string>
    <string name="share_chooser_title">Send with&#8230;</string>

    <string name="tips">Hints</string>
    <string name="get_coins">Get coins</string>
    <string name="success">Well!</string>
    <string name="coins_button">COINS</string>
    <string name="video">for watching video</string>
    <string name="next">Next</string>
    <string name="purchases_restored">Your purchase has been restored!</string>
    <string name="purchases_successful">Your purchase has been confirmed!</string>
    <string name="purchases_error">Error while initializing in-game purchases!</string>
    <string name="purchases_error_retry">Error while initializing in-game purchases! Retrying…</string>
    <string name="purchases_error_billing_flow">Payment launch error!</string>
    <string name="remove_ads">+ REMOVE ADS</string>
    <string name="level">level %d</string>
    <string name="percent">Level %d/%d</string>
    <string name="completed">Completed!</string>
    <string name="buy_levels">Unlock for %d</string>
    <plurals name="complete_levels_to_unlock">
        <item quantity="one">or complete %d more level</item>
        <item quantity="other">or complete %d more levels</item>
    </plurals>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="dont_enough_coins">Not enough coins</string>
    <string name="confirm_dialog_message">Unlock new levels for %d coins?</string>
    <string name="video_error">Video loading error. Check your internet connection.</string>
    <string name="video_is_loading">Video is loading&#8230;</string>
    <string name="video_reward">Reward has been received!</string>
    <string name="levels">Levels</string>
    <string name="play">Play</string>
    <string name="shop">Shop</string>
    <string name="rate">Rate</string>
    <string name="coins">Coins</string>
    <string name="tip_letter">Open letter</string>
    <string name="tip_remove">Remove unused</string>
    <string name="tip_skip">Skip level</string>
    <string name="ads_settings"><u>Personalized ads settings</u></string>

    <!-- Level info -->
    <string name="photo_info">Photo info</string>
    <string name="info_license_title">License: </string>
    <string name="info_author_title">Author: </string>

    <!--  Levels  -->

    <string name="alphabet">abcdefghijklmnopqrstuvwxyz012345</string>

    <string-array name="packs_names">
        <item>Russian Auto</item>
        <item>Test</item>
        <item>Big string test</item>
    </string-array>

    <array name="packs">
        <item>russian_cars</item>
        <item>test</item>
        <item>big_words_test</item>
    </array>

    <!-- Upper case not supported -->

    <string-array name="russian_cars">
        <item>priora</item>
        <item>eight</item>
        <item>patriot</item>
        <item>granta</item>
        <item>moskvich</item>
        <item>niva</item>
        <item>oka</item>
        <item>seven</item>
        <item>kopeika</item>
        <item>six</item>
    </string-array>

    <string name="russian_cars_caption">What is on the photo?</string>

    <string-array name="russian_cars_captions">
        <item>Caption 1</item>
        <item>-</item>
        <item>*</item>
        <item>Caption 4</item>
        <item>*</item>
        <item>*</item>
        <item>*</item>
        <item>*</item>
        <item>*</item>
        <item>Caption 10</item>
    </string-array>

    <string-array name="test">
        <item>большоесловоцц</item>
        <item>что</item>
        <item>тут про бе лы</item>
        <item>буквы и пробел</item>
        <item>раз</item>
        <item>два</item>
        <item>три</item>
        <item>проверка</item>
        <item>тут всё</item>
        <item>конец</item>
    </string-array>

    <string name="test_caption">Test Pack Caption</string>

    <string-array name="big_words_test">
        <item>австралийский шелковистый терьер</item>
        <item>большой вандейский бассет гриффон</item>
        <item>оченьбольшоесловонатридцатьсимволов</item>
        <item>гладкошёрстная стандартная такса</item>
        <item>жесткошёрстная стандартная такса</item>
        <item>ирландский красный сеттер</item>
        <item>курчавошёрстный ретривер</item>
        <item>польская подгалянская овчарка</item>
        <item>русская псовая борзая</item>
        <item>трансильванская гончая</item>
    </string-array>

</resources>