<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="@dimen/tips_padding"
    android:paddingBottom="@dimen/tips_padding">

    <RelativeLayout
        android:id="@+id/tips_letter"
        style="@style/TipsButtonStyle"
        android:layout_marginBottom="@dimen/tips_button_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_font_download_black_24"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/tip_letter"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/tips_letter_cost"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tips_letter_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_coins"
            android:drawableEnd="@drawable/coin_icon_16"
            android:drawablePadding="@dimen/tips_button_coins_drawable_padding"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size"
            tools:text="20" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tips_remove"
        style="@style/TipsButtonStyle"
        android:layout_marginBottom="@dimen/tips_button_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_clear_black_24"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/tip_remove"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/tips_remove_cost"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tips_remove_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_coins"
            android:drawableEnd="@drawable/coin_icon_16"
            android:drawablePadding="@dimen/tips_button_coins_drawable_padding"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size"
            tools:text="20" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tips_skip"
        style="@style/TipsButtonStyle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/baseline_exit_to_app_black_24"
            android:drawablePadding="6dp"
            android:gravity="center"
            android:text="@string/tip_skip"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size" />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/tips_skip_cost"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/tips_skip_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/description_coins"
            android:drawableEnd="@drawable/coin_icon_16"
            android:drawablePadding="@dimen/tips_button_coins_drawable_padding"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:textSize="@dimen/tips_button_text_size"
            tools:text="20" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tips_cancel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/tips_button_height"
        android:layout_marginTop="@dimen/tips_cancel_margin_top"
        android:background="@drawable/button_selector_white"
        android:gravity="center"
        android:paddingStart="@dimen/tips_cancel_padding"
        android:paddingEnd="@dimen/tips_cancel_padding"
        android:text="@string/cancel"
        android:textColor="@android:color/black"
        android:textSize="@dimen/tips_button_text_size" />

</LinearLayout>